テスト結果をサイト毎に

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,7 @@
 !.yarn/versions
 
 # testing
-/coverage
-/test-results/
-/playwright-report/
-/playwright/.cache/
-**/result/
+tests/**/result/
 
 # next.js
 /.next/
