--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "playwright test",
-    "test:static": "playwright test --project=static-land",
+    "test:static": "PLAYWRIGHT_PROJECT=static-land playwright test --project=static-land",
     "test:report": "npx playwright show-report",
-    "test:report:static": "npx playwright show-report tests/static/result/"
+    "test:report:static": "npx playwright show-report tests/static/result/reports/html"
   },
   "dependencies": {
     "next": "15.3.3",
