wip: late limit

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test": "playwright test",
     "test:static": "PLAYWRIGHT_PROJECT=static-land playwright test --project=static-land",
+    "test:dynamic": "PLAYWRIGHT_PROJECT=dynamic-maze playwright test --project=dynamic-maze",
     "test:report": "npx playwright show-report",
     "test:report:static": "npx playwright show-report $(ls -td tests/static/result/*/reports/html 2>/dev/null | head -1 || echo 'tests/static/result')"
   },
