--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.53.0",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
     "typescript": "^5"
   }
 }
