wip: error occured
~/Repository/metacrawlable  infra/container-env ✗                                                                                                 3m ⚑  ⍉
▶ npm run test:docker:static

> metacrawlable@0.1.0 test:docker:static
> docker-compose run --rm playwright-test npx playwright test --project=static-land

[+] Creating 1/1
 ✔ Container metacrawlable-app-1  Running                                                                                                            0.0s
[+] Running 1/1
 ✘ playwright-test Error failed to resolve reference "mcr.microsoft.com/playwright:v1.53.0-focal": mcr.microsoft.com/playw...                        0.2s
Error response from daemon: failed to resolve reference "mcr.microsoft.com/playwright:v1.53.0-focal": mcr.microsoft.com/playwright:v1.53.0-focal: not found

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,21 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+
+  # テスト実行用サービス
+  playwright-test:
+    image: mcr.microsoft.com/playwright:v1.53.0-focal
+    depends_on:
+      - app
+    volumes:
+      - ./tests:/workspace/tests
+      - ./playwright.config.ts:/workspace/playwright.config.ts
+      - ./package.json:/workspace/package.json
+    working_dir: /workspace
+    command: |
+      sh -c "
+        npm install @playwright/test &&
+        npx playwright test --base-url=http://app:3000
+      "
+    environment:
+      - CI=true
