--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test:client": "PLAYWRIGHT_PROJECT=client-shadow playwright test --project=client-shadow",
     "test:antibot": "PLAYWRIGHT_PROJECT=bot-warden playwright test --project=bot-warden",
     "test:report": "npx playwright show-report",
-    "test:report:static": "npx playwright show-report $(ls -td tests/static/result/*/reports/html 2>/dev/null | head -1 || echo 'tests/static/result')"
+    "test:report:static": "npx playwright show-report $(ls -td tests/static/result/*/reports/html 2>/dev/null | head -1 || echo 'tests/static/result')",
+    "test:docker": "docker-compose run --rm playwright-test",
+    "test:docker:static": "docker-compose run --rm playwright-test npx playwright test --project=static-land",
+    "test:docker:all": "docker-compose up -d app && docker-compose run --rm playwright-test && docker-compose down"
   },
   "dependencies": {
     "next": "15.3.3",
