Dockerfileのマルチステージビルドを導入し、開発環境とテスト環境を統合。docker-compose.ymlを更新し、appサービスのビルドターゲットをdevelopmentに変更。playwright-testサービスのDockerfileを削除し、テスト用の設定をDockerfileに統合。これにより、テストプロセスの効率化と構成の簡素化を実現。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      target: development
     ports:
       - "3000:3000"
     volumes:
@@ -13,7 +15,7 @@ services:
   playwright-test:
     build:
       context: .
-      dockerfile: Dockerfile.playwright
+      target: test
     depends_on:
       - app
     volumes:
