--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     volumes:
       - ./tests:/app/tests
     working_dir: /app
-    command: sh -c "BASE_URL=http://app:3000 npx playwright test"
+    command: sh -c "BASE_URL=http://app:3000 ${OVERRIDE_COMMAND:-npx playwright test --workers=4}"
     environment:
       - CI=true
+      - PLAYWRIGHT_WORKERS=4
