--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:report": "npx playwright show-report",
     "test:report:static": "npx playwright show-report $(ls -td tests/static/result/*/reports/html 2>/dev/null | head -1 || echo 'tests/static/result')",
     "test:docker": "docker-compose run --rm playwright-test",
-    "test:docker:static": "docker-compose run --rm playwright-test npx playwright test --project=static-land --workers=4",
+    "test:docker:static": "docker-compose run --rm playwright-test npx playwright test --project=static-land",
     "test:docker:all": "docker-compose up -d app && docker-compose run --rm playwright-test && docker-compose down"
   },
   "dependencies": {
