err: worker数は増えたがエラー発生中
    Retry #2 ───────────────────────────────────────────────────────────────────────────────────────

    Error: page.goto: net::ERR_SSL_PROTOCOL_ERROR at http://app:3000/static
    Call log:
      - navigating to "http://app:3000/static", waiting until "load"

      125 |
      126 |     for (const url of urls) {
    > 127 |       const response = await page.goto(url);
          |                                   ^
      128 |       expect(response?.status()).toBe(200);
      129 |     }
      130 |   });
        at /app/tests/static/pages.spec.ts:127:35

    attachment #1: screenshot (image/png) ──────────────────────────────────────────────────────────
    tests/static/result/2025-06-16T13-58-59/artifacts/pages-StaticLand-Pages-all-pages-return-200-status-static-land-retry2/test-failed-1.png
    ────────────────────────────────────────────────────────────────────────────────────────────────

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - ./tests:/app/tests
     working_dir: /app
-    command: sh -c "BASE_URL=http://app:3000 npx playwright test --workers=4"
     environment:
       - CI=true
       - PLAYWRIGHT_WORKERS=4
+      - BASE_URL=http://app:3000
