--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,5 @@ services:
     environment:
       - CI=true
       - PLAYWRIGHT_WORKERS=4
-      - BASE_URL=http://localhost:3000
+      - DEV_HOST=localhost
+      - DEV_PORT=3000
