環境変数の出所を一つに

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - DEV_HOST=localhost
+      - DEV_PORT=3000
 
   # テスト実行用サービス
   playwright-test:
