--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "DEV_HOST=localhost DEV_PORT=3000 next dev --turbopack --port $DEV_PORT",
+    "dev": "next dev --turbopack --port ${DEV_PORT:-3000}",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
