--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  metacrawlable-network:
+    driver: bridge
+
 services:
   app:
     build:
@@ -10,6 +14,9 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    networks:
+      - metacrawlable-network
+    container_name: metacrawlable-app
 
   # テスト実行用サービス
   playwright-test:
@@ -17,11 +24,14 @@ services:
       context: .
       target: test
     depends_on:
-      - app
-    network_mode: "host"
+      app:
+        condition: service_started
     volumes:
       - ./tests:/app/tests
     working_dir: /app
     environment:
       - CI=true
       - PLAYWRIGHT_WORKERS=4
+      - BASE_URL=http://metacrawlable-app:3000
+    networks:
+      - metacrawlable-network
