npm run test:dockerの成功
  解決策の概要：

  1. network_mode: "host"を削除してDockerネットワークを使用
  2. カスタムネットワークmetacrawlable-networkを作成
  3. コンテナ名をmetacrawlable-appに固定
  4. 環境変数BASE_URL=http://metacrawlable-app:3000でコンテナ通信
  5. playwright.config.tsでprocess.env.BASE_URLをサポート

  最適化ポイント：
  - ヘルスチェック追加でアプリ準備完了を確認
  - ワーカー数を4→2に調整してリソース効率化
  - メモリ制限とshm_sizeでPlaywright安定化
  - service_healthyでテスト開始前の確実な準備完了

  結果：
  - 全テストサイトが正常動作（41テスト全パス）
  - 本番環境対応（hostネットワーク不要）
  - 安定性向上（ヘルスチェック機能）
  - パフォーマンス最適化（リソース調整）

  これでDockerネットワークを使用した本番対応の環境が完成しました。

---
# 詳細

  🔍 過去の失敗原因（network設定済みなのに失敗した理由）

  ❌ 過去の設定（e16d5c28）の問題点

  # 問題1: 不適切な依存関係管理
  depends_on:
    app:
      condition: service_started  # ←これが問題！

  # 問題2: ヘルスチェックなし
  app:
    # healthcheck設定なし ←アプリが完全に起動する前にテスト開始

  # 問題3: リソース制限なし
  playwright-test:
    # mem_limit, shm_sizeなし ←Chromiumクラッシュの原因
    environment:
      - PLAYWRIGHT_WORKERS=4  # ←過負荷

  ✅ 現在の成功設定との決定的差異

  | 項目      | 過去（失敗）          | 現在（成功）          | 影響
              |
  |---------|-----------------|-----------------|-----------------|
  | 依存関係    | service_started | service_healthy | 致命的差異
       |
  | ヘルスチェック | なし              | HTTPレスポンス確認     |
  致命的差異           |
  | メモリ制限   | なし              | mem_limit: 2g   |
  Chromiumクラッシュ防止 |
  | 共有メモリ   | なし              | shm_size: 1g    |
  ブラウザ安定化         |
  | ワーカー数   | 4               | 2               |
  リソース過負荷防止       |

  🎯 失敗の核心原因

  1. service_started vs service_healthyの決定的差異

  # ❌ 過去の失敗設定
  depends_on:
    app:
      condition: service_started  # コンテナ起動≠アプリ準備完了

  問題: コンテナが起動しても、Next.jsアプリが完全に準備できていない状
  態でPlaywrightが接続を試みる
  結果: ERR_CONNECTION_REFUSEDやECONNRESETエラー

  # ✅ 現在の成功設定
  depends_on:
    app:
      condition: service_healthy  # 実際のHTTPレスポンス確認

  2. ヘルスチェックの重要性

  過去はコンテナプロセス起動とWebサーバー準備完了を混同していました。

  # ✅ 追加されたヘルスチェック
  healthcheck:
    test: ["CMD", "node", "-e",
  "require('http').get('http://localhost:3000/static', (res) =>
  process.exit(res.statusCode === 200 ? 0 : 1)).on('error', () =>
 

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,12 @@ services:
     networks:
       - metacrawlable-network
     container_name: metacrawlable-app
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/static', (res) => process.exit(res.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
   # テスト実行用サービス
   playwright-test:
@@ -25,13 +31,15 @@ services:
       target: test
     depends_on:
       app:
-        condition: service_started
+        condition: service_healthy
     volumes:
       - ./tests:/app/tests
     working_dir: /app
     environment:
       - CI=true
-      - PLAYWRIGHT_WORKERS=4
+      - PLAYWRIGHT_WORKERS=2
       - BASE_URL=http://metacrawlable-app:3000
     networks:
       - metacrawlable-network
+    mem_limit: 2g
+    shm_size: 1g
