--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:report:static": "npx playwright show-report $(ls -td tests/static/result/*/reports/html 2>/dev/null | head -1 || echo 'tests/static/result')",
     "test:docker": "docker-compose run --rm playwright-test",
     "test:docker:static": "docker-compose run --rm playwright-test npx playwright test --project=static-land",
+    "test:docker:dynamic": "docker-compose run --rm playwright-test npx playwright test --project=dynamic-maze",
+    "test:docker:client": "docker-compose run --rm playwright-test npx playwright test --project=client-shadow",
+    "test:docker:antibot": "docker-compose run --rm playwright-test npx playwright test --project=bot-warden",
     "test:docker:all": "docker-compose up -d app && docker-compose run --rm playwright-test && docker-compose down"
   },
   "dependencies": {
