ローカルCI/CD動作テスト
⏺ ローカルCI/CD動作確認方法 ✅

  1. 簡単な方法（推奨）

  個別テスト:
  npm run typecheck          # TypeScript型チェック
  npm run lint               # ESLintチェック
  npm run build              # ビルドテスト
  npm run ci:security        # セキュリティスキャン
  npm run test:docker:all    # 統合テスト

  完全CI/CDパイプライン模擬:
  ./scripts/local-ci.sh      # 全テストを自動実行

  2. GitHub Actions完全再現（act）

  セットアップ:
  ./scripts/setup-act.sh     # actツールをインストール

  実行:
  act                        # 全ワークフロー実行
  act push                   # pushトリガーのワークフロー
  act -j test                # テストジョブのみ

  3. 動作確認済み項目

  - ✅ セキュリティスキャン: 脆弱性0件
  - ✅ TypeScript型チェック: エラーなし
  - ✅ 本番Dockerビルド: 成功
  - ✅ CI/CDスクリプト: 実行可能状態

  ./scripts/local-ci.shを実行すれば、GitHub
  Actionsと同等のテストが実行されます。

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "test:docker:all": "docker-compose up -d app && docker-compose run --rm playwright-test && docker-compose down",
     "ci:test": "npm run typecheck && npm run lint && npm run build && npm run test:playwright",
     "ci:docker-test": "docker-compose up -d && npm run test:docker:all",
+    "ci:full": "npm run ci:test && npm run ci:docker-test",
+    "ci:security": "npm audit --audit-level=moderate",
+    "ci:build-production": "docker build --target production -t metacrawlable:local .",
+    "ci:test-production": "docker run --rm -d --name test-local -p 3000:3000 metacrawlable:local && sleep 10 && curl -f http://localhost:3000/api/health && docker stop test-local",
     "health-check": "curl -f http://localhost:3000/api/health || exit 1"
   },
   "dependencies": {
