local-ci.shのタイムアウトエラーの原因と修正
⏺ 🔧 タイムアウトエラーの原因と修正

  📊 問題分析

  エラーの原因:
  Test timeout of 30000ms exceeded (30秒)
  → Docker環境でのページ読み込みが遅い
  → `/static/articles/26`で特にタイムアウト

  根本原因:
  1. Docker環境の性能制限: コンテナ間通信による遅延
  2. 並列実行による負荷: 複数テストの同時実行
  3. タイムアウト設定不足: Docker用の適切な値未設定

  ✅ 実施した修正

  1. Playwrightタイムアウト設定の最適化

  // playwright.config.ts
  use: {
    navigationTimeout: process.env.CI ? 60000 : 30000, //
  Docker環境では60秒
    actionTimeout: process.env.CI ? 30000 : 15000,     //
  アクション待機時間
  },
  timeout: process.env.CI ? 120000 : 60000, //
  テスト全体のタイムアウト

  2. Docker Compose性能改善

  app:
    mem_limit: 1g      # メモリ制限
    cpus: 1.0          # CPU制限

  playwright-test:
    PLAYWRIGHT_WORKERS=1  # 並列数を削減（負荷軽減）
    mem_limit: 3g         # テスト用により多くのメモリ
    shm_size: 2g          # ブラウザ用共有メモリ増加
    cpus: 2.0             # より多くのCPUリソース

  3. ヘルスチェック調整

  healthcheck:
    timeout: 10s        # 5s → 10s
    retries: 5          # 3 → 5回
    start_period: 45s   # 30s → 45s（起動待機時間延長）

  🎯 期待される改善効果

  - タイムアウトエラー解決: 60秒まで待機可能
  - 安定性向上: 並列実行数削減で負荷軽減
  - リソース最適化: 適切なメモリ・CPU配分

  🚀 修正後のテスト実行

  # 修正したCIを再実行
  ./scripts/local-ci.sh

  # または個別にテスト
  npm run test:docker:static

  これでタイムアウトエラーが解決されるはずです！

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3000/api/health || exit 1"]
       interval: 15s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 45s
+    mem_limit: 1g
+    cpus: 1.0
 
   # テスト実行用サービス
   playwright-test:
@@ -37,9 +39,10 @@ services:
     working_dir: /app
     environment:
       - CI=true
-      - PLAYWRIGHT_WORKERS=2
+      - PLAYWRIGHT_WORKERS=1  # パフォーマンス改善のため並列数を削減
       - BASE_URL=http://metacrawlable-app:3000
     networks:
       - metacrawlable-network
-    mem_limit: 2g
-    shm_size: 1g
+    mem_limit: 3g
+    shm_size: 2g
+    cpus: 2.0
